# SnAIke

./: .gitignore  requirements.txt
CPP/: CMakeLists.txt  main.cpp
CPP/agents/: agent.h  geneticAgent.cpp  geneticAgent.h  neuralNetwork.cpp
CPP/app/: configRegistry.cpp  configRegistry.h  helpers.cpp  helpers.h  json.h  menu.cpp  menu.h  registry.h
CPP/checkpoints/: GeneticAlgorithm_meta.json  GeneticAlgorithm_weights.json  genetic_registry.json
CPP/core/: engine.cpp  engine.h  env.cpp  env.h  snake.cpp
CPP/include/: agent.h  engine.h  env.h  geneticAgent.h  helpers.h  menu.h  neuralNetwork.h  registry.h  session.h  snake.h  trainer.h  types.h
CPP/src/: engine.cpp  env.cpp  geneticAgent.cpp  helpers.cpp  menu.cpp  neuralNetwork.cpp  session.cpp  snake.cpp  trainer.cpp
CPP/training/: trainer.cpp  trainer.h
PY/src/: main.py  profiler.py
PY/src/agents/: genetic_agent.py  neat_agent.py  random_agent.py
PY/src/checkpoints/: GeneticAlgorithm_meta.json  GeneticAlgorithm_weights.json  GeneticAlgorithm_weights.npz
PY/src/playing/: session.py
PY/src/ui/: renderer.py
docs/: architecture.txt  results.md
src/: main.py
src/agents/: base_agent.py  genetic_agent.py  human_agent.py  qlearning_agent.py
src/checkpoints/: GeneticAlgorithm.json  GeneticAlgorithm_meta.json  GeneticAlgorithm_weights.npz
src/core/: engine.py  snake.py
src/envs/: snake_env.py
src/playing/: evaluator.py  session.py  trainer.py
src/ui/: input_handler.py  renderer.py
